<resources>
    <string name="app_name">Kasbus</string>

    <string-array name="all_faculties">
        <item>CHGF</item>
        <item>EVAF</item>
        <item>FLF</item>
        <item>FILF</item>
        <item>FF</item>
        <item>GMC</item>
        <item>IF</item>
        <item>KNF</item>
        <item>KOMF</item>
        <item>MF</item>
        <item>TSPMI</item>
        <item>TF</item>
        <item>VM</item>
        <item>ŠA</item>
    </string-array>


    <string name="icon_content_descr">Kasbus clickable icon</string>
    <string name="language">EN/LT</string>
    <string name="filter">Filter out subjects</string>
    <string name="search_bar_hint">Search for subjects</string>

    <string name="loading">Loading...</string>
    <string name="loading_failed">Loading failed</string>
    <string name="retry_button">Retry</string>

    <string name="amount_of_credits">Amount of credits:</string>
    <string name="subject_language">Language:</string>
    <string name="amount_of_hours_text">Amount of hours:</string>
    <string name="go_to_site">Go to an official site</string>
    <string name="interest_text">Interest</string>
    <string name="your_evaluation">Your evaluation:</string>
    <string name="amount_of_work_text">Amount of work</string>
    <string name="actuality">Actuality</string>
    <string name="teaching">Teaching</string>
    <string name="empty">-</string>
    <string name="delivery_text">Delivery:</string>
    <string name="exam_text">Exam:</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="rating_content_descr">rating</string>

    <string name="leave_comment">Leave your comment here...</string>
    <string name="faculty_text">Faculty</string>
    <string name="send_button_text">Send</string>
    <string name="reminder_text">Remember, all of us expect to find valuable and constructive feedback, not just some random spamą</string>

    <string name="faculties">Faculties</string>
    <string name="delivery">Delivery:</string>
    <string name="remote">Remote</string>
    <string name="on_site">On site</string>
    <string name="hybrid">Hybrid</string>
    <string name="any">Any</string>
    <string name="language_filter">Language</string>
    <string name="english">English</string>
    <string name="lithuanian">Lithuanian</string>
    <string name="done">Done</string>
    <string name="empty_filter">Default</string>
</resources>