<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9F1239"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faculties"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold" />

        <GridLayout
            android:id="@+id/grid_faculties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="2"
            android:padding="16dp"
            android:rowCount="8"
            android:useDefaultMargins="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/delivery_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/filter_remote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#C0C0C0"
                android:text="@string/remote"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/filter_on_site"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#C0C0C0"
                android:text="@string/on_site"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/filter_hybrid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#C0C0C0"
                android:text="@string/hybrid"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/filter_delivery_any"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#C0C0C0"
                android:text="@string/any"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_filter"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/language_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/filter_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#C0C0C0"
                android:text="@string/english"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/filter_lithuanian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#C0C0C0"
                android:text="@string/lithuanian"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/filter_language_any"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#C0C0C0"
                android:text="@string/any"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </RadioGroup>

        <Button
            android:id="@+id/doneButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/done"
            android:textSize="20sp" />

        <Button
            android:id="@+id/emptyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/empty_filter"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>